# UTask

./: .gitignore  LICENSE  README.md
.github/workflows/: bot-tests.yml  server-tests.yml
bot/: .dockerignore  Dockerfile  Makefile  README.md  bot-entrypoint.sh  botconfig.yaml  config.go  docker-compose.yml  go.mod  go.sum  main.go
bot/actor/: actor.go  fsm.go  state.go  storage.go
bot/api/: api.go  fakeapi.go  types.go  types_test.go
bot/fakes/: fakes.go
bot/helpers/: helpers.go
bot/menu/: menu.go
bot/roles/user/: begin.go  bug_create.go  bug_select_component.go  bug_select_confirm.go  bug_select_project.go  common.go  create.go  main_menu.go  mainmenu.go  user.go
bot/roles/user/bug/: README.md  bug_create.go  bug_create_test.go  bug_select_component.go  bug_select_component_test.go  bug_select_confirm.go  bug_select_confirm_test.go  bug_select_project.go  bug_select_project_test.go
bot/roles/user/common/: common.go
bot/scope/: scope.go
bot/session/: session.go
docs/: api_v0.0.1.yaml
docs/stories/: README.md
docs/stories/all_tasks/: get_all_tasks.md  get_my_tasks.md
server/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml
server/include/: rxcurl.h
server/include/domain/domain_model/: filter.h  project.h  role.h  task.h  user.h
server/include/domain/domain_repository_interface/: project_repository_interface.h  role_repository_interface.h  task_repository_interface.h  user_repository_interface.h
server/include/domain/domain_service_interface/: project_service_interface.h  role_service_interface.h  task_service_interface.h  user_service_interface.h
server/include/repositories/: db_manager_interface.h  repository_interface.h
server/include/services/: service_interface.h
server/include/utils/: aixlog.h  logger.h
server/src/: CMakeLists.txt  testlib.cc  testlib.h
server/src/core/: CMakeLists.txt  project.h
server/src/core/repo/: db_manager.h  repo.h  table_info.h
server/src/domain/: CMakeLists.txt
server/src/domain/domain_model/: CMakeLists.txt  filter.cc  project.cc  role.cc  task.cc  user.cc
server/src/entities/: filter.h  project.h  role.h  task.h  user.h
server/src/infrastructure/: CMakeLists.txt
server/src/infrastructure/controllers/: CMakeLists.txt
server/src/pistache_server/: CMakeLists.txt  README.md  UserApiMainServer.cpp
server/src/pistache_server/api/: UserApi.cpp  UserApi.h
server/src/pistache_server/impl/: UserApiImpl.cpp  UserApiImpl.h
server/src/pistache_server/model/: ModelBase.cpp  ModelBase.h  ProjectFilter.cpp  ProjectFilter.h  ProjectInfo.cpp  ProjectInfo.h  Role.cpp  Role.h  RoleInfo.cpp  RoleInfo.h  Task.cpp  Task.h  TaskFilter.cpp  TaskFilter.h  TaskInfo.cpp  TaskInfo.h  User.cpp  User.h  UserFilter.cpp  UserFilter.h  UserInfo.cpp  UserInfo.h
server/src/repositories/: CMakeLists.txt  project_repository.cc  project_repository.h  role_repository.cc  role_repository.h  task_repository.cc  task_repository.h  user_repository.cc  user_repository.h
server/src/repositories/curl/: CMakeLists.txt
server/src/repositories/sqlite/: CMakeLists.txt  sqlite_manager.cpp  sqlite_manager.h  sqlite_repo.h  table_info.cpp  user_sqlite_helper.cc  user_sqlite_helper.h
server/src/repository/: CMakeLists.txt
server/src/repository/curl/: CMakeLists.txt  curl_repo.cc  curl_repo.h  curl_rx.cpp  curl_test.cpp
server/src/repository/sqlite/: CMakeLists.txt  sqlite_manager.cpp  sqlite_manager.h  sqlite_repo.cpp  sqlite_repo.h  table_info.cpp  table_info.h  table_info_creator.h  table_info_factory.h
server/src/repository/sqlite/tests/: CMakeLists.txt  sqlite_manager_tests.cpp
server/src/services/: CMakeLists.txt  user_service.cc  user_service.h
server/test/: CMakeLists.txt  testlib_add.cc  testlib_subtract.cc
server/test/domain/domain_model/: CMakeLists.txt  user_test.cc
server/test/repositories/: CMakeLists.txt  user_repo_tests.cc
server/test/repositories/sqlite/: CMakeLists.txt  sqlite_repo_tests.cc
server/test/services/: CMakeLists.txt  user_service_tests.cpp
